WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14332
REGRESSION (
r21145
): <td> width ignored
https://bugs.webkit.org/show_bug.cgi?id=14332
Summary
REGRESSION (r21145): <td> width ignored
Thomas Steinacher
Reported
2007-06-23 03:27:15 PDT
In the following example: <table width="100%" border="0"><tr><td></td><td style="width:400px;"> Lorem ipsum ... </td><td></td></tr></table> In Safari 2 and 3.0.2 (and Firefox) the text is centered and is 400px wide. In the nightly Safari, the text is 100% wide, which is wrong.
Attachments
testcase
(619 bytes, text/html)
2007-06-23 03:28 PDT
,
Thomas Steinacher
no flags
Details
check for cellpadding too
(105.49 KB, patch)
2007-06-28 05:44 PDT
,
Antti Koivisto
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thomas Steinacher
Comment 1
2007-06-23 03:28:11 PDT
Created
attachment 15195
[details]
testcase
mitz
Comment 2
2007-06-23 06:37:04 PDT
Regressed in
r21145
(fix for
bug 13081
).
mitz
Comment 3
2007-06-23 06:38:38 PDT
Note that the purpose of
r21145
was to better match Firefox, however Firefox and WinIE do not agree with TOT on the test case.
David Kilzer (:ddkilzer)
Comment 4
2007-06-23 11:53:32 PDT
<
rdar://problem/5290123
>
Antti Koivisto
Comment 5
2007-06-28 05:44:59 PDT
Created
attachment 15287
[details]
check for cellpadding too
mitz
Comment 6
2007-06-28 05:53:02 PDT
Comment on
attachment 15287
[details]
check for cellpadding too yes! r=me
Antti Koivisto
Comment 7
2007-06-28 06:56:26 PDT
Sending LayoutTests/ChangeLog Sending LayoutTests/fast/css/acid2-expected.txt Sending LayoutTests/fast/css/acid2-pixel-expected.txt Sending LayoutTests/fast/table/032-expected.txt Sending LayoutTests/fast/table/empty-cells-expected.checksum Sending LayoutTests/fast/table/empty-cells-expected.png Sending LayoutTests/fast/table/empty-cells-expected.txt Sending LayoutTests/fast/table/empty-cells.html Sending LayoutTests/fast/table/empty-section-crash-expected.txt Sending LayoutTests/http/tests/misc/acid2-expected.txt Sending LayoutTests/http/tests/misc/acid2-pixel-expected.txt Sending LayoutTests/tables/mozilla/bugs/
bug222467
-expected.txt Sending LayoutTests/tables/mozilla/bugs/
bug78162
-expected.txt Sending WebCore/ChangeLog Sending WebCore/rendering/AutoTableLayout.cpp Transmitting file data ............... Committed revision 23850.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug