LayoutTests:

Reviewed by Mitz.

        Test changes for http://bugs.webkit.org/show_bug.cgi?id=14332
        Bug 14332: REGRESSION (r21145): <td> width ignored
        <rdar://problem/5290123>

        - expand empty-cells.html to cover non-zero cellpadding case too
        - update other related tests (none of these affect pixel results)

        * fast/css/acid2-expected.txt:
        * fast/css/acid2-pixel-expected.txt:
        * fast/table/032-expected.txt:
        * fast/table/empty-cells-expected.checksum:
        * fast/table/empty-cells-expected.png:
        * fast/table/empty-cells-expected.txt:
        * fast/table/empty-cells.html:
        * fast/table/empty-section-crash-expected.txt:
        * http/tests/misc/acid2-expected.txt:
        * http/tests/misc/acid2-pixel-expected.txt:
        * tables/mozilla/bugs/bug222467-expected.txt:
        * tables/mozilla/bugs/bug78162-expected.txt:

WebCore:

        Reviewed by Mitz.

        Fix http://bugs.webkit.org/show_bug.cgi?id=14332
        Bug 14332: REGRESSION (r21145): <td> width ignored
        <rdar://problem/5290123>

        Cells in table with non-zero cellpadding are not considered empty.

        * rendering/AutoTableLayout.cpp:
        (WebCore::AutoTableLayout::recalcColumn):



Canonical link: https://commits.webkit.org/18625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23850 268f45cc-cd09-0410-ab3c-d52691b4dbfc